--- a/script/worker_analysis.haml
+++ b/script/worker_analysis.haml
@@ -55,9 +55,12 @@
       table[data-sortable] tbody tr:hover {
         background: #ddf;
       }
-      body:not(.show-unused) tr.unused {
+      body:not(.show-unused) tr.unused, tr.filtered-out {
         display: none;
       }
+
+      input { display: block; width: 30%; }
+      input[type=checkbox] { display: inline; width: auto; }
 
       .number {
         text-align: right;
@@ -102,6 +105,19 @@
         var checked = document.getElementById('toggle-show-unused').checked
         document.body.classList[checked ? 'add' : 'remove']('show-unused')
       }
+      function filterTable(){
+        var filter = new RegExp(document.getElementById('filter').value)
+        var rows = document.querySelectorAll('tbody.filterable tr')
+        for (var i = 0, _i = rows.length; i < _i; i++) {
+          var row = rows[i]
+          if (!row.hasAttribute('data-filter-text')) {
+            var text = row.textContent.replace(/\s+/g, ' ')
+            row.setAttribute('data-filter-text', text)
+          }
+          var show = filter.test(row.getAttribute('data-filter-text'))
+          row.classList[show ? 'remove' : 'add']('filtered-out')
+        }
+      }
   %body
     .formats
       - format_links.each do |format, link|
@@ -119,6 +135,10 @@
         %input#toggle-show-unused(type="checkbox" onchange="toggleShowUnused()")
         Show chains with workers failed for every image
     %p
+      %label(for="filter")
+        Filter chains by regexp
+        %input#filter(type="text" onkeyup="filterTable()")
+    %p
       Images: #{stats.each_chain.first.entry_count},
       size: #{stats.each_chain.first.original_size}
     %table(data-sortable)
@@ -134,7 +154,7 @@
           %th(data-default-direction="ascending") Avg difference
           %th(data-default-direction="ascending") Max difference
           %th Speed (B/s)
-      %tbody
+      %tbody.filterable
         - stats.each_chain do |chain|
           %tr{class: chain.unused_workers && 'unused'}
             %td
